--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.16.2",
     "express": "^4.19.2",
     "pg": "^8.12.0"
   },
@@ -21,6 +22,7 @@
     "@types/node": "^20.14.9",
     "jest": "^29.7.0",
     "prisma": "^5.16.2",
+    "supertest": "^7.0.0",
     "typescript": "^5.5.2"
   }
 }
