--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "dependencies": {
     "@prisma/client": "^5.16.2",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.9",
     "jest": "^29.7.0",
     "prisma": "^5.16.2",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.2",
     "typescript": "^5.5.2"
   }
 }
